[project]
name = "Standard-kayez-library-backend-dev"
version = "0.2.0"
description = "Internal Framework Standard for High-Performance Microservices"
authors = [
    {name = "kayez",email = "mamattewahyu@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.27",
    "sqlalchemy>=2.0.37",
    "asyncpg>=0.30.0",
    "structlog>=25.1.0",
    "redis>=5.2.1",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn[standard]>=0.34.0",
    "orjson>=3.10.15",
    "python-multipart>=0.0.20",
    "tenacity>=9.0.0",
    "uuid6 (>=2025.0.1,<2026.0.0)",
    "sqids (>=0.5.2,<0.6.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "tree (>=0.2.4,<0.3.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"    
]
[project.urls]
Homepage = "https://kayez.com/p/portofolio"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "std_pack", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
ruff = "^0.9.2"
mypy = "^1.14.1"
black = "^24.10.0"
httpx = "^0.28.1"

# --- Konfigurasi Tools ---

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
# 1. Konfigurasi Dasar
minversion = "8.0"
addopts = """
    -ra 
    -q 
    --cov=src/std_pack 
    --cov-report=term-missing 
    --cov-fail-under=95
"""
# Penjelasan flags:
# -ra : Tampilkan ringkasan (reason) untuk test yang skip/fail.
# -q  : Quiet mode (mengurangi output sampah, fokus ke hasil).
# --cov : Hitung coverage hanya untuk folder source code library.
# --term-missing : Tampilkan baris kode mana yang BELUM dites.
# --fail-under=95 : CI/CD akan gagal jika test coverage di bawah 99%.

testpaths = ["tests"]
pythonpath = ["src"]

# 2. Konfigurasi Asyncio (SANGAT PENTING untuk Python 3.13 + Pytest-Asyncio Baru)
# Ini akan memperbaiki warning "event_loop fixture redefined" yang muncul di log Anda.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# 3. Manajemen Warning
# Filter warning yang bising agar log tetap bersih.
filterwarnings = [
    "error",  # Anggap semua warning sebagai error (Strict Mode)
    "ignore::DeprecationWarning:pydantic.*",  # Abaikan deprecation internal Pydantic sementara
    "ignore::DeprecationWarning:sqlalchemy.*", # Abaikan deprecation internal SQLAlchemy sementara
    "ignore:The event_loop fixture provided by pytest-asyncio has been redefined:DeprecationWarning" # Abaikan warning loop spesifik ini karena kita handle di conftest
]

# 4. Markers (Label untuk Test)
markers = [
    "unit: Test yang berjalan isolasi tanpa DB/IO nyata.",
    "integration: Test yang menyentuh DB, Redis, atau API luar.",
    "slow: Test yang lambat (bisa di-skip saat development cepat)."
]

# --- Konfigurasi Coverage (Pelaporan) ---
[tool.coverage.run]
branch = true
source = ["src/std_pack"]
omit = [
    "*/__init__.py",
    "src/std_pack/bootstrap/*",  # Bootstrap code seringkali sulit dicover unit test
    "tests/*",
]
    # lepas
    #"src/std_pack/infrastructure/logging/logger.py" # Skip Logger Config
    #"src/std_pack/infrastructure/cache/*",      # Skip Redis Cache sementara
    #"src/std_pack/infrastructure/events/redis_bus.py", # Skip Redis Bus sementara   

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true